work flow added.

--- a/src/app/shared/layout/layout-components/dashboard/dashboard.component.html
+++ b/src/app/shared/layout/layout-components/dashboard/dashboard.component.html
@@ -1,1 +1,5 @@
-<p>dashboard works!</p>
+<div class="bg-dark">
+    <div class="bg-light"> HOME</div>
+    <div class="bg-danger"> Search</div>
+    <div class="bg-warning">Your Library</div>
+</div>
