--- a/src/app/shared/layout/layout-structures/page-home-layout/page-home-layout.component.html
+++ b/src/app/shared/layout/layout-structures/page-home-layout/page-home-layout.component.html
@@ -1,1 +1,13 @@
-<router-outlet></router-outlet>
+<div class="container-fluid bg-warning h2 text-center">
+    <span>M Music </span>
+</div>
+<div class="container-fluid ">
+    <div class="row">
+        <div class="col-md-2 border border-danger">
+            <app-dashboard></app-dashboard>
+        </div>
+        <div class="col-md-10 border border-danger">
+            <router-outlet></router-outlet>
+        </div>
+    </div>
+</div>
