--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-@import '~bootstrap/dist/css/bootstrap.min.css'
+@import '~bootstrap/dist/css/bootstrap.min.css';
+$bgColor: #dddddd;
+$orangeColor: #e4461e;
+$cardColor: #e8e8e8;
