--- a/src/app/shared/layout/layout-structures/page-home-layout/page-home-layout.component.html
+++ b/src/app/shared/layout/layout-structures/page-home-layout/page-home-layout.component.html
@@ -1,12 +1,9 @@
-<div class="container-fluid bg-warning h2 text-center">
-    <span>M Music </span>
-</div>
 <div class="container-fluid ">
-    <div class="row">
-        <div class="col-md-2 border border-danger">
+    <div class="row page_container">
+        <div class="col-md-2 p-0 vh-100 dashboard">
             <app-dashboard></app-dashboard>
         </div>
-        <div class="col-md-10 border border-danger">
+        <div class="col-md-10 py-3 home">
             <router-outlet></router-outlet>
         </div>
     </div>
