--- a/src/app/shared/layout/layout-components/dashboard/dashboard.component.html
+++ b/src/app/shared/layout/layout-components/dashboard/dashboard.component.html
@@ -1,5 +1,8 @@
-<div class="bg-dark">
-    <div class="bg-light"> HOME</div>
-    <div class="bg-danger"> Search</div>
-    <div class="bg-warning">Your Library</div>
+<div class="dashboard_container d-flex flex-column">
+    <div class="h4 fw-bold text-center">M Music</div>
+    <button class="home_btn btn p-2">HOME</button>
+    <button class="search_btn btn p-2"> Search</button>
+    <button class="library_btn btn text-nowrap p-2">Your Library</button>
+    <button class="playlist_btn btn text-nowrap mt-4 p-2">Create Playlist</button>
+    <button class="liked_song_btn btn p-2">Liked Songs</button>
 </div>
