--- a/src/app/features/user/home/page-home/page-home.component.html
+++ b/src/app/features/user/home/page-home/page-home.component.html
@@ -1,1 +1,3 @@
-<div class="container home_container">Releases For You</div>
+<div class="container home_container">
+    <app-hindi-party></app-hindi-party>
+</div>
