--- a/src/app/shared/layout/layout-components/dashboard/dashboard.component.html
+++ b/src/app/shared/layout/layout-components/dashboard/dashboard.component.html
@@ -1,8 +1,24 @@
 <div class="dashboard_container d-flex flex-column">
-    <div class="h4 fw-bold text-center">M Music</div>
-    <button class="home_btn btn p-2">HOME</button>
-    <button class="search_btn btn p-2"> Search</button>
-    <button class="library_btn btn text-nowrap p-2">Your Library</button>
-    <button class="playlist_btn btn text-nowrap mt-4 p-2">Create Playlist</button>
-    <button class="liked_song_btn btn p-2">Liked Songs</button>
+    <div class="h4 fw-bold text-white text-center">M Music</div>
+    <button class="home_btn btn rounded-pill py-2 px-4">
+        <i class="fa fa-home" aria-hidden="true"></i>
+        HOME
+    </button>
+    <button class="search_btn btn rounded-pill py-2 px-4">
+        <i class="fa fa-search" aria-hidden="true"></i>
+        Search
+    </button>
+    <button class="library_btn btn text-nowrap rounded-pill py-2 px-4">
+        <i class="fa fa-book" aria-hidden="true"></i>
+        Your Library
+    </button>
+    <button class="playlist_btn btn text-nowrap rounded-pill mt-4 py-2 px-4">
+        <i class="fa fa-music" aria-hidden="true"></i>
+        Create Playlist
+    </button>
+    <button class="liked_song_btn rounded-pill btn py-2 px-4">
+        <i class="fa fa-heart" aria-hidden="true"></i>
+        Liked Songs
+    </button>
+    
 </div>
