--- a/src/app/shared/layout/layout-structures/page-home-layout/page-home-layout.component.html
+++ b/src/app/shared/layout/layout-structures/page-home-layout/page-home-layout.component.html
@@ -3,8 +3,11 @@
         <div class="col-md-2 p-0 vh-100 dashboard">
             <app-dashboard></app-dashboard>
         </div>
-        <div class="col-md-10 py-3 home">
+        <div class="col-md-8 py-3 home">
             <router-outlet></router-outlet>
+        </div>
+        <div class="col-md-2 p-0 vh-100 dashboard">
+            <app-dashboard></app-dashboard>
         </div>
     </div>
 </div>
