--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~bootstrap/dist/css/bootstrap.min.css';
 :root{
---bg:  #dfe1eb;
---bglight: #ebecf0;
---highlight: c7b1ef;
---white: #FAF9FB;
---black: #26192f;
+--bg:  #242424;
+--bglight: #373737;
+--highlight: #444;
+--black: #aeaeae;
+--darkwhite: #6d6d6d;;
 }
