--- a/src/app/features/user/home/page-home/page-home.component.scss
+++ b/src/app/features/user/home/page-home/page-home.component.scss
@@ -3,4 +3,5 @@
     background-color: var(--bglight);
     border-radius: 20px;
     height: 1500px;
+    box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
 }
