--- a/src/app/features/user/home/page-home-components/hindi-party/hindi-party.component.html
+++ b/src/app/features/user/home/page-home-components/hindi-party/hindi-party.component.html
@@ -1,49 +1,29 @@
-<div class="container">
-    <div class="d-flex justify-content-between subtitle_wrapper">
-        <p class="fs-3">Hindi party</p>
-        <a class="fs-6 link">SEE ALL</a>
+<div class="container my-4 p-0">
+    <div id="sub-header">
+        <h3>Hindi party</h3>
+        <div>
+            <i class="fa fa-angle-left"></i>
+            <i id="angle-icon" class="fa fa-angle-right"></i>
+        </div>
     </div>
     <div class="row justify-content-around">
-        <div class="col-md-3">
-            <div class="card card_container p-3">
-                <img
-                    src="https://3.bp.blogspot.com/-cvF9UEYgmkc/V37qCNZQwLI/AAAAAAAAAbY/3Vrvqlv9tvkwpfB4f-qiq-ZuD5PsBKawQCLcB/s1600/DL%2B-%2BDL.png">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <h6 class="card-subtitle mb-2 text-muted ">Card subtitle</h6>
-                </div>
-
-            </div>
-        </div><div class="col-md-3">
-            <div class="card card_container p-3">
-                <img
-                    src="https://3.bp.blogspot.com/-cvF9UEYgmkc/V37qCNZQwLI/AAAAAAAAAbY/3Vrvqlv9tvkwpfB4f-qiq-ZuD5PsBKawQCLcB/s1600/DL%2B-%2BDL.png">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <h6 class="card-subtitle mb-2 text-muted ">Card subtitle</h6>
-                </div>
-
-            </div>
-        </div><div class="col-md-3">
-            <div class="card card_container p-3">
-                <img
-                    src="https://3.bp.blogspot.com/-cvF9UEYgmkc/V37qCNZQwLI/AAAAAAAAAbY/3Vrvqlv9tvkwpfB4f-qiq-ZuD5PsBKawQCLcB/s1600/DL%2B-%2BDL.png">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <h6 class="card-subtitle mb-2 text-muted ">Card subtitle</h6>
-                </div>
-
-            </div>
-        </div><div class="col-md-3">
-            <div class="card card_container p-3">
-                <img
-                    src="https://3.bp.blogspot.com/-cvF9UEYgmkc/V37qCNZQwLI/AAAAAAAAAbY/3Vrvqlv9tvkwpfB4f-qiq-ZuD5PsBKawQCLcB/s1600/DL%2B-%2BDL.png">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <h6 class="card-subtitle mb-2 text-muted ">Card subtitle</h6>
-                </div>
-
-            </div>
+        <div class="col-md-2">
+            <app-music-card></app-music-card>
+        </div>
+        <div class="col-md-2">
+            <app-music-card></app-music-card>
+        </div>
+        <div class="col-md-2">
+            <app-music-card></app-music-card>
+        </div>
+        <div class="col-md-2">
+            <app-music-card></app-music-card>
+        </div>
+        <div class="col-md-2">
+            <app-music-card></app-music-card>
+        </div>
+        <div class="col-md-2">
+            <app-music-card></app-music-card>
         </div>
     </div>
 </div>
