--- a/src/app/features/user/home/page-home-components/hindi-party/hindi-party.component.scss
+++ b/src/app/features/user/home/page-home-components/hindi-party/hindi-party.component.scss
@@ -1,23 +1,13 @@
-.subtitle_wrapper{
-    color: var(--black);
-    font-weight: 600;
-    .link{
-        color: var(--black);
-        padding: 16px;
-        text-decoration: none;
-    }
-}
 
-.card_container{
-    max-width:200px;
-    width: 100%;
-    height: 250px;
-    background-color: var(--highlight);
-    border-radius: 10px;
-    img{
-        border-radius: 5px;
-    }
+#sub-header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
-.card_container:hover {
-    background-color: var(--darkwhite);
+#sub-header h3{
+    letter-spacing: 0.7px;
+    font-size: 17px;
+}
+#angle-icon{
+    margin: 0 10px;
 }
