--- a/src/app/features/user/home/page-home-components/recently-played/recently-played.component.html
+++ b/src/app/features/user/home/page-home-components/recently-played/recently-played.component.html
@@ -1,1 +1,29 @@
-<p>recently-played works!</p>
+<div class="container my-4 p-0">
+    <div id="sub-header">
+        <h3>Recently Played</h3>
+        <div>
+            <i class="fa fa-angle-left"></i>
+            <i id="angle-icon" class="fa fa-angle-right"></i>
+        </div>
+    </div>
+    <div class="row justify-content-around">
+        <div class="col-md-2">
+            <app-music-card></app-music-card>
+        </div>
+        <div class="col-md-2">
+            <app-music-card></app-music-card>
+        </div>
+        <div class="col-md-2">
+            <app-music-card></app-music-card>
+        </div>
+        <div class="col-md-2">
+            <app-music-card></app-music-card>
+        </div>
+        <div class="col-md-2">
+            <app-music-card></app-music-card>
+        </div>
+        <div class="col-md-2">
+            <app-music-card></app-music-card>
+        </div>
+    </div>
+</div>
