--- a/src/app/features/user/home/page-home/page-home.component.html
+++ b/src/app/features/user/home/page-home/page-home.component.html
@@ -1,3 +1,13 @@
-<div class="container home_container">
+<div class=" home_container">
+    <app-home-banner></app-home-banner>
+
+    <app-recently-played></app-recently-played>
+    
     <app-hindi-party></app-hindi-party>
-</div>
+    
+    <app-hindi-party></app-hindi-party>
+    
+    <app-todays-hit></app-todays-hit>
+    
+    <app-hindi-party></app-hindi-party>
+</div> 
