--- a/src/app/shared/global-components/music-card/music-card.component.html
+++ b/src/app/shared/global-components/music-card/music-card.component.html
@@ -1,1 +1,10 @@
-<p>music-card works!</p>
+<div class="card card_container p-1">
+    <img
+    src="https://assets.tonica.la/__export/1537306689555/sites/debate/img/2018/09/18/maxresdefault_x1x.jpg_1359985867.jpg" 
+    alt="img"/>
+    <div class="card-body p-0 mt-2">
+        <h6 class="card-title my-1">Card title</h6>
+        <p class="card-subtitle ">Card subtitle</p>
+    </div>
+
+</div>
