--- a/src/app/shared/global-components/page-error/page-error.component.html
+++ b/src/app/shared/global-components/page-error/page-error.component.html
@@ -1,1 +1,21 @@
-<p>page-error works!</p>
+<div class="container-fluid page">
+    <div class="row">
+      <div class="col-md-12">
+        <div
+          class="row w-100 d-flex justify-content-center align-items-center error-403-wrapper"
+        >
+          <div class="col-md-12">
+            <p class="heading mb-0">Error 404</p>
+            <p>You might be thinking</p>
+            <img src="https://i.ibb.co/yXxJdqW/404.jpg" id="featured-image" />
+            <p class="mt-3">
+              and we are looking for it, till then you can
+              <a href="#">Click here to return to the Homepage.</a>
+            </p>
+          </div>
+          <div class="col-md-12 d-flex justify-content-center">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
