--- a/src/app/shared/layout/layout-components/home-header/home-header.component.html
+++ b/src/app/shared/layout/layout-components/home-header/home-header.component.html
@@ -1,1 +1,14 @@
-<p>home-header works!</p>
+<header>
+    <div id="topbar">
+        <div id="search">
+            <input id="search-box" type="search" name="search" placeholder="Search for song,artists etc..." />
+            <i id="search-icon" class="fa fa-search"></i>
+        </div>
+
+        <div id="right">
+            <i class="fa fa-bell"></i>
+            <i id="cog-icon" class="fa fa-cog"></i>
+            <button class="btn">Don't Click here</button>
+        </div>
+    </div>
+</header>
