--- a/src/app/shared/layout/layout-components/dashboard/dashboard.component.html
+++ b/src/app/shared/layout/layout-components/dashboard/dashboard.component.html
@@ -1,24 +1,22 @@
-<div class="dashboard_container d-flex flex-column">
-    <div class="h4 fw-bold text-white text-center">M Music</div>
-    <button class="home_btn btn rounded-pill py-2 px-4">
-        <i class="fa fa-home" aria-hidden="true"></i>
-        HOME
-    </button>
-    <button class="search_btn btn rounded-pill py-2 px-4">
-        <i class="fa fa-search" aria-hidden="true"></i>
-        Search
-    </button>
-    <button class="library_btn btn text-nowrap rounded-pill py-2 px-4">
-        <i class="fa fa-book" aria-hidden="true"></i>
-        Your Library
-    </button>
-    <button class="playlist_btn btn text-nowrap rounded-pill mt-4 py-2 px-4">
-        <i class="fa fa-music" aria-hidden="true"></i>
-        Create Playlist
-    </button>
-    <button class="liked_song_btn rounded-pill btn py-2 px-4">
-        <i class="fa fa-heart" aria-hidden="true"></i>
-        Liked Songs
-    </button>
-    
+<div class="dashboard_container">
+    <aside>
+        <div id="user-div">
+            <img class="profile_img"
+                src="https://imgix.bustle.com/inverse/30/73/24/3c/1222/490c/8172/20fc7e131358/chance-the-rapper-coloring-book-2-chainz-lil-wayne-download-mixtape.jpeg"
+                alt="img" />
+            <h3>Lauda Lahsun</h3>
+            <p>Chammar@dummy.com</p>
+        </div>
+
+        <div id="menu-div">
+            <p routerLink="../user/home" class="list-para"><span><i class="fa fa-home"></i></span>Home</p>
+            <p routerLink="../auth/error" class="list-para"><span><i class="fa fa-chrome"></i></span>Search</p>
+            <p routerLink="../auth/error" class="list-para"><span><i class="fa fa-bookmark"></i></span>Album</p>
+            <p routerLink="../auth/error" class="list-para"><span><i class="fa fa-user"></i></span>Artists</p>
+            <p routerLink="../auth/error" class="list-para"><span><i class="fa fa-video-camera"></i></span>Videos</p>
+            <h3 id="music-h3">MY MUSIC</h3>
+            <p routerLink="../auth/error" class="list-para text-nowrap"><span><i class="fa fa-history"></i></span>Recently Played</p>
+            <p routerLink="../auth/error" class="list-para"><span><i class="fa fa-file"></i></span>Local Files</p>
+        </div>
+    </aside>
 </div>
