--- a/src/app/shared/layout/layout-components/dashboard/dashboard.component.html
+++ b/src/app/shared/layout/layout-components/dashboard/dashboard.component.html
@@ -4,19 +4,58 @@
             <img class="profile_img"
                 src="https://imgix.bustle.com/inverse/30/73/24/3c/1222/490c/8172/20fc7e131358/chance-the-rapper-coloring-book-2-chainz-lil-wayne-download-mixtape.jpeg"
                 alt="img" />
-            <h3>Lauda Lahsun</h3>
-            <p>Chammar@dummy.com</p>
+            <h3>
+                Lauda Lahsun
+            </h3>
+            <p>
+                Chammar@dummy.com
+            </p>
         </div>
 
         <div id="menu-div">
-            <p routerLink="../user/home" class="list-para"><span><i class="fa fa-home"></i></span>Home</p>
-            <p routerLink="../auth/error" class="list-para"><span><i class="fa fa-chrome"></i></span>Search</p>
-            <p routerLink="../auth/error" class="list-para"><span><i class="fa fa-bookmark"></i></span>Album</p>
-            <p routerLink="../auth/error" class="list-para"><span><i class="fa fa-user"></i></span>Artists</p>
-            <p routerLink="../auth/error" class="list-para"><span><i class="fa fa-video-camera"></i></span>Videos</p>
+            <p routerLink="../user/home" class="list-para">
+                <span>
+                    <i class="fa fa-home"></i>
+                </span>
+                Home
+            </p>
+            <p routerLink="../auth/error" class="list-para">
+                <span>
+                    <i class="fa fa-chrome"></i>
+                </span>
+                Search
+            </p>
+            <p routerLink="../auth/error" class="list-para">
+                <span>
+                    <i class="fa fa-bookmark"></i>
+                </span>
+                Album
+            </p>
+            <p routerLink="../auth/error" class="list-para">
+                <span>
+                    <i class="fa fa-user"></i>
+                </span>
+                Artists
+            </p>
+            <p routerLink="../auth/error" class="list-para">
+                <span>
+                    <i class="fa fa-video-camera"></i>
+                </span>
+                Videos
+            </p>
             <h3 id="music-h3">MY MUSIC</h3>
-            <p routerLink="../auth/error" class="list-para text-nowrap"><span><i class="fa fa-history"></i></span>Recently Played</p>
-            <p routerLink="../auth/error" class="list-para"><span><i class="fa fa-file"></i></span>Local Files</p>
+            <p routerLink="../auth/error" class="list-para text-nowrap">
+                <span>
+                    <i class="fa fa-history"></i>
+                </span>
+                Recently Played
+            </p>
+            <p routerLink="../auth/error" class="list-para">
+                <span>
+                    <i class="fa fa-file"></i>
+                </span>
+                Local Files
+            </p>
         </div>
     </aside>
 </div>
