--- a/src/app/shared/layout/layout-components/dashboard/dashboard.component.html
+++ b/src/app/shared/layout/layout-components/dashboard/dashboard.component.html
@@ -29,13 +29,7 @@
                 <span>
                     <i class="fa fa-bookmark"></i>
                 </span>
-                Album
-            </p>
-            <p routerLink="../auth/error" class="list-para">
-                <span>
-                    <i class="fa fa-user"></i>
-                </span>
-                Artists
+                Library
             </p>
             <p routerLink="../auth/error" class="list-para">
                 <span>
@@ -44,12 +38,6 @@
                 Videos
             </p>
             <h3 id="music-h3">MY MUSIC</h3>
-            <p routerLink="../auth/error" class="list-para text-nowrap">
-                <span>
-                    <i class="fa fa-history"></i>
-                </span>
-                Recently Played
-            </p>
             <p routerLink="../auth/error" class="list-para">
                 <span>
                     <i class="fa fa-file"></i>
