--- a/src/app/features/user/home/page-home-components/todays-hit/todays-hit.component.html
+++ b/src/app/features/user/home/page-home-components/todays-hit/todays-hit.component.html
@@ -1,29 +1,94 @@
 <div class="container my-4 p-0">
-    <div id="sub-header">
-        <h3>Today's Hit</h3>
-        <div>
-            <i class="fa fa-angle-left"></i>
-            <i id="angle-icon" class="fa fa-angle-right"></i>
+    <div id="todaysHit_carousel" class="carousel carousel-dark slide" data-bs-ride="carousel"
+            data-bs-interval="false">
+        <div id="sub-header">
+            <h3>Today's Hit</h3>
+            <div class="d-flex">
+                <button class="carousel-control-prev p-0 mx-2" type="button" data-bs-target="#todaysHit_carousel"
+                    data-bs-slide="prev">
+                    <i class="fa fa-angle-left"></i>
+                </button>
+                <button class="carousel-control-next mx-2" type="button" data-bs-target="#todaysHit_carousel"
+                    data-bs-slide="next">
+                    <i class="fa fa-angle-right"></i>
+                </button>
+            </div>
         </div>
-    </div>
-    <div class="row justify-content-around">
-        <div class="col-md-2">
-            <app-music-card></app-music-card>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <div class="container p-0">
+                    <div class="row justify-content-around">
+                        <div class="col-md-2">
+                            <app-music-card></app-music-card>
+                        </div>
+                        <div class="col-md-2">
+                            <app-music-card></app-music-card>
+                        </div>
+                        <div class="col-md-2">
+                            <app-music-card></app-music-card>
+                        </div>
+                        <div class="col-md-2">
+                            <app-music-card></app-music-card>
+                        </div>
+                        <div class="col-md-2">
+                            <app-music-card></app-music-card>
+                        </div>
+                        <div class="col-md-2">
+                            <app-music-card></app-music-card>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <div class="container p-0">
+                    <div class="row justify-content-around">
+                        <div class="col-md-2">
+                            <app-music-card></app-music-card>
+                        </div>
+                        <div class="col-md-2">
+                            <app-music-card></app-music-card>
+                        </div>
+                        <div class="col-md-2">
+                            <app-music-card></app-music-card>
+                        </div>
+                        <div class="col-md-2">
+                            <app-music-card></app-music-card>
+                        </div>
+                        <div class="col-md-2">
+                            <app-music-card></app-music-card>
+                        </div>
+                        <div class="col-md-2">
+                            <app-music-card></app-music-card>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="carousel-item">
+                <div class="container p-0">
+                    <div class="row justify-content-around">
+                        <div class="col-md-2">
+                            <app-music-card></app-music-card>
+                        </div>
+                        <div class="col-md-2">
+                            <app-music-card></app-music-card>
+                        </div>
+                        <div class="col-md-2">
+                            <app-music-card></app-music-card>
+                        </div>
+                        <div class="col-md-2">
+                            <app-music-card></app-music-card>
+                        </div>
+                        <div class="col-md-2">
+                            <app-music-card></app-music-card>
+                        </div>
+                        <div class="col-md-2">
+                            <app-music-card></app-music-card>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="col-md-2">
-            <app-music-card></app-music-card>
-        </div>
-        <div class="col-md-2">
-            <app-music-card></app-music-card>
-        </div>
-        <div class="col-md-2">
-            <app-music-card></app-music-card>
-        </div>
-        <div class="col-md-2">
-            <app-music-card></app-music-card>
-        </div>
-        <div class="col-md-2">
-            <app-music-card></app-music-card>
-        </div>
+
     </div>
 </div>
