--- a/src/app/shared/layout/layout-components/dashboard/dashboard.component.html
+++ b/src/app/shared/layout/layout-components/dashboard/dashboard.component.html
@@ -19,13 +19,13 @@
                 </span>
                 Home
             </p>
-            <p routerLink="../auth/error" class="list-para">
+            <p routerLink="../user/search" class="list-para">
                 <span>
-                    <i class="fa fa-chrome"></i>
+                    <i class="fa fa-search"></i>
                 </span>
                 Search
             </p>
-            <p routerLink="../auth/error" class="list-para">
+            <p routerLink="../user/library" class="list-para">
                 <span>
                     <i class="fa fa-bookmark"></i>
                 </span>
