--- a/src/app/shared/layout/layout-structures/page-home-layout/page-home-layout.component.html
+++ b/src/app/shared/layout/layout-structures/page-home-layout/page-home-layout.component.html
@@ -7,5 +7,8 @@
             <app-home-header></app-home-header>
             <router-outlet></router-outlet>
         </div>
+        <div class="container-fluid p-0 fixed-bottom">
+            <app-play-bar></app-play-bar>
+        </div>
     </div>
 </div>
