--- a/src/app/shared/global-components/page-error/page-error.component.html
+++ b/src/app/shared/global-components/page-error/page-error.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid page">
+<div class="container-fluid page_container m-0 p-0">
     <div class="row">
       <div class="col-md-12">
         <div
