--- a/src/app/shared/global-components/page-error/page-error.component.scss
+++ b/src/app/shared/global-components/page-error/page-error.component.scss
@@ -1,14 +1,11 @@
- .page{
+ .page_container{
   font-size: 62.5%;
   font-size: 1.6rem;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-  margin: 0;
-  padding: 0;
   overflow-x: hidden;
   background-color: #1f2029;
 }
-
 .error-403-wrapper {
   height: 100vh;
   text-align: center;
