--- a/src/app/features/user/home/page-home-components/todays-hit/todays-hit.component.html
+++ b/src/app/features/user/home/page-home-components/todays-hit/todays-hit.component.html
@@ -1,6 +1,5 @@
 <div class="container my-4 p-0">
-    <div id="todaysHit_carousel" class="carousel carousel-dark slide" data-bs-ride="carousel"
-            data-bs-interval="false">
+    <div id="todaysHit_carousel" class="carousel carousel-dark slide" data-bs-ride="carousel" data-bs-interval="false">
         <div id="sub-header">
             <h3>Today's Hit</h3>
             <div class="d-flex">
@@ -18,23 +17,8 @@
             <div class="carousel-item active">
                 <div class="container p-0">
                     <div class="row justify-content-around">
-                        <div class="col-md-2">
-                            <app-music-card></app-music-card>
-                        </div>
-                        <div class="col-md-2">
-                            <app-music-card></app-music-card>
-                        </div>
-                        <div class="col-md-2">
-                            <app-music-card></app-music-card>
-                        </div>
-                        <div class="col-md-2">
-                            <app-music-card></app-music-card>
-                        </div>
-                        <div class="col-md-2">
-                            <app-music-card></app-music-card>
-                        </div>
-                        <div class="col-md-2">
-                            <app-music-card></app-music-card>
+                        <div class="col-md-2" *ngFor="let detail of cardData">
+                            <app-music-card [cardTitle]="detail.title" [urlpath]="detail.imgurl"></app-music-card>
                         </div>
                     </div>
                 </div>
@@ -42,48 +26,8 @@
             <div class="carousel-item">
                 <div class="container p-0">
                     <div class="row justify-content-around">
-                        <div class="col-md-2">
-                            <app-music-card></app-music-card>
-                        </div>
-                        <div class="col-md-2">
-                            <app-music-card></app-music-card>
-                        </div>
-                        <div class="col-md-2">
-                            <app-music-card></app-music-card>
-                        </div>
-                        <div class="col-md-2">
-                            <app-music-card></app-music-card>
-                        </div>
-                        <div class="col-md-2">
-                            <app-music-card></app-music-card>
-                        </div>
-                        <div class="col-md-2">
-                            <app-music-card></app-music-card>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="carousel-item">
-                <div class="container p-0">
-                    <div class="row justify-content-around">
-                        <div class="col-md-2">
-                            <app-music-card></app-music-card>
-                        </div>
-                        <div class="col-md-2">
-                            <app-music-card></app-music-card>
-                        </div>
-                        <div class="col-md-2">
-                            <app-music-card></app-music-card>
-                        </div>
-                        <div class="col-md-2">
-                            <app-music-card></app-music-card>
-                        </div>
-                        <div class="col-md-2">
-                            <app-music-card></app-music-card>
-                        </div>
-                        <div class="col-md-2">
-                            <app-music-card></app-music-card>
+                        <div class="col-md-2" *ngFor="let detail of cardData2">
+                            <app-music-card [cardTitle]="detail.title" [urlpath]="detail.imgurl"></app-music-card>
                         </div>
                     </div>
                 </div>
