--- a/src/app/features/user/home/page-home-components/hindi-party/hindi-party.component.html
+++ b/src/app/features/user/home/page-home-components/hindi-party/hindi-party.component.html
@@ -16,54 +16,24 @@
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <div class="container p-0">
-                    <div class="row justify-content-around">
-                        <div class="col-md-2">
-                            <app-music-card></app-music-card>
-                        </div>
-                        <div class="col-md-2">
-                            <app-music-card></app-music-card>
-                        </div>
-                        <div class="col-md-2">
-                            <app-music-card></app-music-card>
-                        </div>
-                        <div class="col-md-2">
-                            <app-music-card></app-music-card>
-                        </div>
-                        <div class="col-md-2">
-                            <app-music-card></app-music-card>
-                        </div>
-                        <div class="col-md-2">
-                            <app-music-card></app-music-card>
+                    <div class="row justify-content-around ">
+                        <div class="col-md-2" *ngFor = "let i of cardInfo">
+                            <app-music-card [cardTitle]="i.title" [urlpath]="i.imgurl"></app-music-card>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="carousel-item">
                 <div class="container p-0">
-                    <div class="row justify-content-around">
-                        <div class="col-md-2">
-                            <app-music-card></app-music-card>
-                        </div>
-                        <div class="col-md-2">
-                            <app-music-card></app-music-card>
-                        </div>
-                        <div class="col-md-2">
-                            <app-music-card></app-music-card>
-                        </div>
-                        <div class="col-md-2">
-                            <app-music-card></app-music-card>
-                        </div>
-                        <div class="col-md-2">
-                            <app-music-card></app-music-card>
-                        </div>
-                        <div class="col-md-2">
-                            <app-music-card></app-music-card>
+                    <div class="row justify-content-around" >
+                        <div class="col-md-2" *ngFor = "let i of cardInfo2" >
+                            <app-music-card [cardTitle]="i.title" [urlpath]="i.imgurl"></app-music-card>
                         </div>
                     </div>
                 </div>
             </div>
 
-            <div class="carousel-item">
+            <!-- <div class="carousel-item">
                 <div class="container p-0">
                     <div class="row justify-content-around">
                         <div class="col-md-2">
@@ -86,7 +56,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
 
     </div>
