--- a/src/app/shared/global-components/play-bar/play-bar.component.scss
+++ b/src/app/shared/global-components/play-bar/play-bar.component.scss
@@ -57,7 +57,7 @@
     left: 15px;
     padding: 13px 22px 10px 184px;
     background-color: #fff7f7;
-    border-radius: 15px 15px 0 0;
+    // border-radius: 15px 15px 0 0;
     transition: 0.3s ease top;
     z-index: 1;
   }
@@ -161,7 +161,7 @@
     height: 100%;
     background-color: #fff;
     box-shadow: 0 30px 80px #656565;
-    border-radius: 15px;
+    // border-radius: 15px;
     z-index: 2;
   }
   
