components added. Redesigned UI.

--- a/src/app/features/user/home/page-home-components/hindi-party/hindi-party.component.html
+++ b/src/app/features/user/home/page-home-components/hindi-party/hindi-party.component.html
@@ -1,7 +1,7 @@
 <div class="container my-4 p-0">
     <div id="hindiParty_carousel" class="carousel carousel-dark slide" data-bs-ride="carousel" data-bs-interval="false">
         <div id="sub-header">
-            <h3>Hindi party</h3>
+            <h3>Bollywood House</h3>
             <div class="d-flex">
                 <button class="carousel-control-prev p-0 mx-2" type="button" data-bs-target="#hindiParty_carousel"
                     data-bs-slide="prev">
