--- a/src/app/features/user/home/page-home-components/hindi-party/hindi-party.component.scss
+++ b/src/app/features/user/home/page-home-components/hindi-party/hindi-party.component.scss
@@ -1,22 +1,25 @@
-#sub-header{
+#sub-header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    h3{
-    letter-spacing: 0.7px;
-    font-size: 17px;
-    }   
+    h3 {
+        color: #d8d8d8;
+        font-weight: 600;
+        letter-spacing: 0.7px;
+        font-size: 17px;
+    }
 }
-#angle-icon{
+#angle-icon {
     margin: 0 10px;
 }
-.carousel-control-next, .carousel-control-prev{
+.carousel-control-next,
+.carousel-control-prev {
     position: relative !important;
     opacity: 1;
 }
 button {
-    i{
-        color: #000;
+    i {
+        color: var(--body-color);
         font-size: 22px;
     }
 }
