--- a/src/app/features/user/home/page-home-components/recently-played/recently-played.component.scss
+++ b/src/app/features/user/home/page-home-components/recently-played/recently-played.component.scss
@@ -2,9 +2,11 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    h3{
-    letter-spacing: 0.7px;
-    font-size: 17px;
+    h3 {
+        color: #d8d8d8;
+        font-weight: 600;
+        letter-spacing: 0.7px;
+        font-size: 17px;
     }   
 }
 #angle-icon{
@@ -16,7 +18,7 @@
 }
 button {
     i{
-        color: #000;
+        color: var(--body-color);
         font-size: 22px;
     }
 }
