--- a/src/app/shared/global-components/music-card/music-card.component.scss
+++ b/src/app/shared/global-components/music-card/music-card.component.scss
@@ -11,16 +11,14 @@
         box-shadow: 0 12px 16px 0  rgb(0,0,0,0.13);
         transition: all 0.3s;
     }
-    .card-subtitle{
+    .card-title{
         font-size: small;
-        color: grey;
+        font-weight: 700;
+        color: var(--body-color);
     }
 }
 .card_container:hover {
     img{
         transform: scale(1.1,1.1);
-    }
-    .card-subtitle{
-        color: black;
     }
 }
