--- a/src/app/shared/layout/layout-components/dashboard/dashboard.component.scss
+++ b/src/app/shared/layout/layout-components/dashboard/dashboard.component.scss
@@ -1,71 +1,117 @@
-
-aside{
-    // width: 18%;
-    border-right:1px solid rgb(204, 204, 204,0.2);
-    box-sizing: border-box;
-    padding: 10px 48px;
-    padding-bottom: 0;
-    background-color: #fff;
-    
+.container {
+    background-color: var(--theme-bg);
+    height: 100vh;
+    display: flex;
+    overflow: hidden;
+    width: 100%;
+    font-size: 15px;
+    box-shadow: 0 20px 50px rgba(0, 0, 0, 0.3);
+    position: relative;
 }
 
-.profile_img{
-    width: 70px;
-    height: 70px;
-    border-radius: 50%;
-    box-shadow: 0 12px 16px 0  rgb(0,0,0,0.13);
+.sidebar {
+    height: 100%;
+    padding: 30px 0;
+    display: flex;
+    flex-direction: column;
+    flex-shrink: 0;
+    transition-duration: 0.2s;
+    overflow-y: auto;
+    overflow-x: hidden;
+    .logo {
+        margin: 0 auto;
+        text-align: center;
+        border-bottom: 1px solid var(--border-color);
+        .profile-img {
+            width: 70px;
+            height: 70px;
+            border-radius: 50%;
+            box-shadow: 0 12px 16px 0 rgb(0, 0, 0, 0.13);
+        }
+        h3 {
+            font-size: 14px;
+            margin: 0;
+            margin-top: 10px;
+            color: #a7afc9;
+        }
+        p {
+            font-size: 12px;
+            margin: 0;
+        }
+    }
+    .side-wrapper {
+        border-bottom: 1px solid var(--border-color);
+        padding: 20px 0;
+        width: 145px;
+        & + & {
+            border-bottom: none;
+        }
+    }
+    .side-menu {
+        display: flex;
+        flex-direction: column;
+        a {
+            display: flex;
+            align-items: center;
+            text-decoration: none;
+            color: var(--body-color);
+            & + a {
+                margin-top: 26px;
+            }
+        }
+        svg {
+            width: 30px;
+            padding: 8px;
+            border-radius: 10px;
+            background-color: var(--button-bg);
+            flex-shrink: 0;
+            margin-right: 16px;
+        }
+    }
+    &-link {
+        &:hover,
+        .is-active {
+            color: #fff;
+            font-weight: 600;
+            &:nth-child(2n + 1) {
+                svg {
+                    color: #fff;
+                    background: #ff7551;
+                }
+                p{
+                    color: #fff;
+                }
+            }
+            &:nth-child(2n) {
+                svg {
+                    color: #fff;
+                    background: #32a7e2;
+                }
+                p{
+                    color: #fff;
+                }
+            }
+            &:nth-child(2n + 3) {
+                svg {
+                    color: #fff;
+                    background: #6c5ecf;
+                }
+                p{
+                    color: #fff;
+                }
+            }
+        }
+    }
 }
 
-#user-div{
-    margin: 0 auto;
-    text-align: center;
-}
-
-#user-div  h3{
-    font-size: 14px;
-    margin: 0;
-    margin-top:10px;
-}
-
-#user-div p{
-    font-size: 12px;
-    margin: 0;
-    color: #a7afc9;
-}
-
-.list-para{
-    font-size: 13px;
-    font-weight: 500;
-    cursor: pointer;
-}
-
-#music-h3{
-    color: #a7afc9;
-    font-size: 14px;
-    margin-top: 30px;
-    letter-spacing: 0.5px;
-}
-
-i{
-    color: #a7afc9;
-    margin-right: 20px;
-}
-
-#menu-div{
-    margin-top: 30%;
-    color: #a7afc9;
-}
-.list-para:hover {
-    color: #000;
-    .fa{
-        color: #000;
-        transform: scale(1.1);
+@keyframes bottom {
+    0% {
+        transform: translateY(100px);
+        opacity: 0;
     }
 
+    100% {
+        opacity: 1;
+        transform: none;
+    }
 }
-
-div > i{
-    margin-right: 2px;
-    cursor: pointer;
-}
-
