--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,10 +2,21 @@
 // @import '~bootstrap/dist/css/bootstrap.min.css';
 
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700,800,900');
-:root{
---bg:  #242424;
---bglight: #373737;
---highlight: #444;
---black: #aeaeae;
---darkwhite: #6d6d6d;;
-}
+
+
+:root {
+    --body-font: "Inter", sans-serif;
+    --theme-bg: #1f1d2b;
+    --body-color: #808191;
+    --button-bg: #353340;
+    --border-color: rgb(128 129 145 / 24%);
+    --video-bg: #252936;
+    --delay: 0s;
+   }
+
+   
+body {
+    font-family: var(--body-font);
+    color: var(--body-color);
+    // background-color: rgba(18, 21, 39, 0.86);
+   }
