--- a/src/app/features/user/home/page-home-components/home-banner/home-banner.component.html
+++ b/src/app/features/user/home/page-home-components/home-banner/home-banner.component.html
@@ -1,5 +1,33 @@
-<div class="banner bg-success border border-secondary">
-    <p> slider ? Albums ? promotional music banner</p>
-    <!-- <img src="https://img.freepik.com/free-psd/rock-music-festival-banner-template_23-2148971255.jpg?t=st=1649647058~exp=1649647658~hmac=c15a3c0c0a5c049f8867fb90a07af873fa21c4ba51bf0b38a5bb42364fac6ca8&w=826"
-    alt="img"> -->
+<div class="carousel_container">
+    <div id="carouselExampleIndicators" class="carousel slide h-25" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+                aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="assets/image/recommended/rec-music.jpeg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="assets/image/recommended/rec-beats.jpeg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="assets/image/recommended/car-music.jpeg" class="d-block w-100" alt="...">
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
 </div>
